--- a/private_Library/private_LaunchAgents/environment.plist
+++ b/private_Library/private_LaunchAgents/environment.plist
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"><plist version="1.0">
-<dict>
-<key>Label</key><string>my.startup.shell_agnostic.environment</string>
-<key>ProgramArguments</key><array><string>sh</string><string>-c</string><string>
-  launchctl setenv XDG_CONFIG_HOME ~/.config
-  launchctl setenv XDG_DATA_HOME ~/.local/share
-</string></array>
-<key>RunAtLoad</key><true/>
-</dict>
+  <dict>
+    <key>Label</key>
+    <string>my.startup.shell_agnostic.environment</string>
+    <key>ProgramArguments</key>
+    <array>
+      <string>sh</string>
+      <string>-c</string>
+      <string>
+        launchctl setenv XDG_CACHE_HOME ~/.cache
+        launchctl setenv XDG_CONFIG_HOME ~/.config
+        launchctl setenv XDG_DATA_HOME ~/.local/share
+      </string>
+    </array>
+    <key>RunAtLoad</key>
+    <true/>
+  </dict>
 </plist>
