--- a/.chezmoidata/mise.yaml
+++ b/.chezmoidata/mise.yaml
@@ -19,10 +19,11 @@ mise:
       aws-sso: '1.17'
       cilium-cli: '0.18'
       go: '1.21'
-      helm: '3'
-      kubectl: '1.30'
-      kubelogin: '1.30'
-      opentofu: '1.10'
-      terraform: '1.12'
+      helm: '3.13'
+      kubectl: '1.32'
+      kubelogin: '1.32'
+      opentofu: '1.11'
+      redis-cli: '8.4'
+      terraform: '1.14'
       terragrunt: 'latest'
       tflint: '0.57'
