--- a/private_Library/private_LaunchAgents/cache_home.plist
+++ b/private_Library/private_LaunchAgents/cache_home.plist
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"><plist version="1.0">
   <dict>
     <key>Label</key>
-    <string>my.startup.shell_agnostic.environment</string>
+    <string>my.startup.cache_home.environment</string>
     <key>ProgramArguments</key>
     <array>
-      <string>sh</string>
-      <string>-c</string>
-      <string>
-        launchctl setenv XDG_CACHE_HOME ~/.cache
-        launchctl setenv XDG_CONFIG_HOME ~/.config
-        launchctl setenv XDG_DATA_HOME ~/.local/share
-      </string>
+        <string>/bin/launchctl</string>
+        <string>setenv</string>
+        <string>XDG_CACHE_HOME</string>
+        <string>~/.cache</string>
     </array>
     <key>RunAtLoad</key>
     <true/>
